# hao_ros

./: .gitignore  README.md
devel/: .catkin  local_setup.sh
devel/include/hao_communication/: PersonMsg.h  PersonSrv.h  PersonSrvRequest.h  PersonSrvResponse.h
devel/lib/hao_common/: turtle_tf_broadcaster  turtle_tf_listener
devel/lib/hao_communication/: person_client  person_publisher  person_server  person_subscriber  string_client  string_publisher  string_server  string_subscriber
devel/lib/pkgconfig/: hao_common.pc  hao_communication.pc
homework/hw3/: CMakeLists.txt  package.xml
homework/hw3/launch/: generate.launch  getBaseAndLidar.launch  simple.launch  turtle_manager.launch
homework/hw3/src/: LB_broadcaster.cpp  LiDAR_listener.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
homework/learning_communication/: CMakeLists.txt  package.xml
homework/learning_communication/scripts/: string_client.py  string_publisher.py
homework/learning_communication/src/: person_client.cpp  person_publisher.cpp  person_server.cpp  person_subscriber.cpp  string_server.cpp
homework/mbot_description/: package.xml
homework/mbot_description/config/: mbot_urdf.rviz  (+1 more)
src/hao_common/: CMakeLists.txt  package.xml
src/hao_communication/: CMakeLists.txt
src/hao_gazebo/: CMakeLists.txt  package.xml
src/hao_robot_control/: CMakeLists.txt  package.xml
src/hao_robot_description/: CMakeLists.txt  package.xml
src/hao_urdf/: CMakeLists.txt  package.xml
src/helloworld/: CMakeLists.txt  package.xml
src/homework/hw3-2/: CMakeLists.txt  package.xml
(+162 files in other folders)
