<?xml version="1.0"?>
<package format="2">
  <name>hw3-2</name>
  <version>0.0.0</version>
  <description>深蓝学院第三章第二问</description>
  <maintainer email="hao@todo.todo">hao</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
  </export>
</package>
